SOE-3276: Banner overlay: button in wysiwyg not responsive scaling codeclimate fixes

--- a/scss/components/_soe_people_spotlight.scss
+++ b/scss/components/_soe_people_spotlight.scss
@@ -64,11 +64,13 @@
 }
 
 // HORIZONTAL CARD VIEW
-.main .spotlight-all-content-container .spotlight-quote {
-  p {
-    overflow: hidden;
+.main {
+  .spotlight-all-content-container .spotlight-quote {
+    p {
+      overflow: hidden;
+    }
   }
-
+  
   &.spotlight {
     #content-head {
       margin-bottom: 0;
